<resources>
    <string name="app_name">Converter</string>
    <string name="tw1">Input value</string>
    <string name="tw2">Result</string>
    <string name="btn">Convert</string>
    <string name="rb1">United States Dollar</string>
    <string name="rb2">Evro </string>
    <string name="rb3">Russian Ruble</string>
    <string name="rb4">Polish Zloty</string>
    <string name="menu_en">English</string>
    <string name="menu_uk">Ukr</string>
</resources>
